add MVC and new Users api
