# controller/demo.go
@@ -11,7 +11,7 @@ var balance = 1000
 
 // @Success 200 {string} string
 // @Tags Demo
-// @Router /demo/v1/hi [get]
+// @Router /api/v1/demo/name [get]
 // @Security ApiKeyAuth
 func GetName(c *gin.Context) {
 	account, ok := c.Get("account")
@@ -22,7 +22,8 @@ func GetName(c *gin.Context) {
 }
 
 // @Success 200 {string} string
-// @Router /balance/ [get]
+// @Tags Demo
+// @Router /api/v1/demo/balance [get]
 func GetBalance(context *gin.Context) {
 	var msg = "您的帳戶內有:" + strconv.Itoa(balance) + "元"
 	context.JSON(http.StatusOK, gin.H{
