# main.go
@@ -1,15 +1,11 @@
 package main
 
 import (
+	"gindemo/db"
 	_ "gindemo/docs"
-	"os"
-
-	"gindemo/controller"
+	"gindemo/routes"
 	"gindemo/vender/jwt_auth"
-
-	"github.com/gin-gonic/gin"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	"os"
 )
 
 /*
@@ -30,24 +26,10 @@ import (
 // @securityDefinitions.apikey  ApiKeyAuth
 // @in header
 // @name Authorization
-
 func main() {
-	router := gin.Default()
-
-	apiV1 := router.Group("/api/v1")
-
-	apiV1.GET("/demo/balance/", controller.GetBalance)
-
-	apiV1.POST("/users/login", controller.Login)
-
-	apiV1.POST("/toekn/refresh", controller.Refresh)
-
-	//demoV1.GET("/revoke", controller.Revoke)
-
-	apiV1.Use(jwt_auth.AuthRequired).GET("/demo/name", controller.GetName)
-
-	url := ginSwagger.URL("http://localhost:8088/swagger/doc.json") // The url pointing to API definition
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
-
+	//db init
+	jwt_auth.Init()
+	db.Init()
+	router := routes.SetRouter()
 	router.Run(":" + os.Getenv("PORT"))
 }
